# libxputty

./: configure  meson.build
